--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
+astroid==2.4.2
 click==7.1.2
-Flask==1.1.2
+fastapi==0.61.1
+h11==0.9.0
+httptools==0.1.1
+isort==5.4.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
+pydantic==1.6.1
+pylint==2.6.0
+six==1.15.0
+starlette==0.13.6
+toml==0.10.1
+uvicorn==0.11.8
+uvloop==0.14.0
+websockets==8.1
 Werkzeug==1.0.1
+wrapt==1.12.1
